[package]
name = "phantom-relay"
version = "0.1.0"
authors = ["icodesign <leimagnet@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Helper methods for relaying tokio read/write stream"
homepage = "https://github.com/icodesign/relay"
repository = "https://github.com/icodesign/relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["io-util", "tcp"] }
futures = "0.3"