[package]
name = "phantom-relay"
version = "0.2.0"
authors = ["icodesign <leimagnet@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Helper methods for relaying tokio read/write stream"
homepage = "https://github.com/icodesign/phantom-relay"
repository = "https://github.com/icodesign/phantom-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["io-util", "tcp"] }
futures = "0.3"
trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git" }
